[package]
name = "bpftune"
version = "0.1.0"
edition = "2021"


[dependencies]
libbpf-rs = "0.18"
clap = { version = "3", features=["derive"] }
anyhow = "1.0"
libc = "0.2"
ctrlc = "3.2.3"
plain = "0.2.3"
num_cpus = "1.0"
cpal = "0.14.0"
serde = "1.0.0"
perf-event-open-sys = "1.0.1"
blazesym = "0.1.0"

[build-dependencies]
libbpf-cargo = "0.12"

